# Smart_restate_AI_Agent

./: README.md  app.py  config.py  pyproject.toml
MapDataFetcher/: models.py  requirements.txt
MapDataFetcher/attached_assets/: Pasted--Economic-Trend-Monitoring-Fetch-and-display-interest-rates-inflation-GDP-housing-supply-demand--1745409849402.txt
MapDataFetcher/routes/: dashboard.py  economic_trends.py  investment_timing.py  roi_calculator.py
MapDataFetcher/services/: ml_models.py  notification.py  pdf_generator.py  trading_economics.py
MapDataFetcher/static/css/: style.css
routes/: alert_system.py  construction_planning.py  location_intelligence.py  property_price.py
services/: database.py  google_maps.py  openstreetmap.py
static/js/: app.js
templates/: index.html
